--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
   background-color: black;
   color: white;
 }
@@ -9,4 +9,4 @@ input {
 
 ::placeholder {
   color: white;
-}
+} */
