--- a/src/Components/ToDo/ToDo.css
+++ b/src/Components/ToDo/ToDo.css
@@ -1,7 +1,15 @@
 .container {
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
   border: 2px white solid;
+  width: 90%;
+}
+
+.Pagination {
+  margin: 0 auto;
+  width: 90%;
+  justify-content: center;
 }
 
 .form {
@@ -15,11 +23,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border: 2px yellow solid;
   width: 60%;
 }
 
 .item {
-  border: 1px red solid;
   width: 100%;
 }
