change styling back to light theme

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,4 +1,11 @@
 header { 
   width: 90%;
+  padding: .5rem;
   margin: 2% auto;
+  background-color: rgb(44, 64, 64);
+  color: white
+}
+
+h1 {
+  margin-left: 2%;
 }
